Bug 485186 - Message Preview Pane Headers Area Lost Background
Summary: Message Preview Pane Headers Area Lost Background
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 6.0.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-07 15:14 UTC by Garry Williams
Modified: 2024-04-08 06:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.3
Sentry Crash Report:


Attachments
Old Fancy Header Style (20.97 KB, image/png)
2024-04-07 15:14 UTC, Garry Williams
Details
New Fancy Header Style (19.07 KB, image/png)
2024-04-07 15:15 UTC, Garry Williams
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Garry Williams 2024-04-07 15:14:11 UTC
Created attachment 168255 [details]
Old Fancy Header Style

SUMMARY
Background has disappeared in the headers area (fancy header style).

See image files

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 40
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.2-300.fc40.x86_64 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-8550U CPU @ 1.80GHz
Memory: 15.1 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Manufacturer: Dell Inc.
Product Name: XPS 13 9370
ADDITIONAL INFORMATION
Comment 1 Garry Williams 2024-04-07 15:15:10 UTC
Created attachment 168256 [details]
New Fancy Header Style
Comment 2 Laurent Montel 2024-04-07 16:01:30 UTC
Bug is in all messages ?
Here it works fine
Comment 3 Garry Williams 2024-04-07 17:21:01 UTC
(In reply to Laurent Montel from comment #2)
> Bug is in all messages ?

Yes.

It may be important to note that the headers are correct if I display the message by hitting enter to open a message window.  It's only the preview pane that displays incorrectly.

Both wayland and x11.
Comment 4 Laurent Montel 2024-04-08 04:51:19 UTC
Ok I can reproduce it if I start kmail with "fancy header style".
Otherwise if I use default kmail 5.2 theme and switch it we don't have problem.

I will investigate it.
Comment 5 Laurent Montel 2024-04-08 06:07:16 UTC
Git commit 6ec4c14fd0be4213685f63840c005feca8a81738 by Laurent Montel.
Committed on 08/04/2024 at 06:06.
Pushed by mlaurent into branch 'release/24.02'.

Fix bug 485186:  Message Preview Pane Headers Area Lost Background
FIXED-IN: 24.02.3

M  +5    -0    messageviewer/src/viewer/csshelperbase.cpp
M  +2    -0    messageviewer/src/viewer/csshelperbase.h
M  +7    -0    messageviewer/src/viewer/renderer/messageviewerrenderer.cpp

https://invent.kde.org/pim/messagelib/-/commit/6ec4c14fd0be4213685f63840c005feca8a81738