Fix bug 485186:  Message Preview Pane Headers Area Lost Background

BUG: 485186
FIXED-IN: 24.02.3